--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ code {
   background-color: black !important;
 }
 
+
 .navlinks{
   text-align: right;
   position:relative;
@@ -40,7 +41,7 @@ code {
   padding: 10px !important;
 }
 
-.testing12{
+.headertext{
   display: flex;
   justify-content: center !important;
   align-items: center !important;
@@ -83,8 +84,8 @@ code {
 }
 
 .jacoboutline {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  position: relative;
 }
 
 .homecontent {
